[package]
name = "solodiag"
publish = false
version = "0.0.1-alpha.1"
edition = "2024"
license = "MIT"
authors = ["Håvard Sørbø <havard@hsorbo.no>"]
repository = "https://github.com/hsorbo/candive"
description = "Solo diagnostic CLI tool"

[[bin]]
name = "solodiag"
path = "src/main.rs"

[dependencies]
candive = { path = "../candive", features = ["diagnostics", "uds"] }
anyhow = "1.0.100"
clap = { version = "4.5", features = ["derive"] }
des = "0.8.1"
hex = "0.4.3"
indicatif = "0.17"

[target.'cfg(target_os = "linux")'.dependencies]
socketcan = "3.5.0"
socketcan-isotp = "1.0"
